Correct contrast on flow buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ section {
 .flow-button {
     display: inline;
     background-color: #c491ef;
-    color:#ffffff;
+    color:#000000;
     font-size: 20px;
     padding: 10px;
     border-radius: 5px;
